--- a/dev/styles.css
+++ b/dev/styles.css
@@ -111,7 +111,7 @@ a {
     height: 100%;
     width: 100%;
     aspect-ratio: 2/3;
-    object-fit: contain;
+    border-radius: 0.3em;
 }
 .movie {
     width: 16em;
